--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
     <div class="seven">
       <div class="four">
         <h1 class="tagline">All of Google, working for you</h1>
+        <div class="sign-info">
         Sign in to your Google Account, and get the most out of all the Google
         services you use. Your account helps you do more by personalizing your
         Google experience and offering easy access to your most important
         information from anywhere.
       </div>
-      <div class="six"><video src="Images/first.mp4" width="100%"></video></div>
+      </div>
+      <div class="six"><video src="Images/first.mp4" autoplay loop  width="100%"></video></div>
     </div>
     <div class="white">
       <div class="name">
-        <h1>Help you</h1>
+        <h1 class="us">Help you</h1>
         <hr class="pop" />
-        <p>
+        <p class="help-info">
           When you’re signed in, all of the Google services you use work
           together seamlessly to offer help with everyday tasks like syncing
           your Gmail with your Google Calendar and Google Maps to make sure
@@ -48,18 +50,18 @@
         </p>
       </div>
       <div class="hope">
-        <h1>Built for you</h1>
+        <h1 class="me">Built for you</h1>
         <hr class="pen" />
-        <p>
+        <p class="pen-info">
           No matter which device or Google service you’re using, your account
           gives you a consistent experience you can customize and manage at any
           time.
         </p>
       </div>
       <div class="help">
-        <h1 class="us">propects you</h1>
+        <h1 class="">propects you</h1>
         <hr class="men" />
-        <p>
+        <p class="help-info">
           Your Google Account is protected by industry-leading security that
           automatically helps detect and block threats before they ever reach
           you.
@@ -69,7 +71,7 @@
     <div class="ten">
       <img src="Images/second.png#" width="250" alt="" />
       <h1 class="pens">Ready to help</h1>
-      <p>
+      <p class="sunny">
         Google services, from Chrome to YouTube, work better and help you do
         more when you’re signed in. Your account gives you access to helpful
         features like Autofill, personalized recommendations, and much more —
@@ -77,11 +79,31 @@
       </p>
     </div>
     <div class="bnt">
-      <span><a href="">Autofill</a></span>
-      <span><a href="">Works better for you</a></span>
-      <span><a href="">Stay connected, across the internet</a></span>
-    </div>
-    <div class="btn2">
+      <section>
+        <div class="container">
+
+            <div class="option-one">
+                <p>Autofill</p>
+                <button></button>
+
+            </div>
+      
+
+            <div class="option-one">
+                <p>Works better for you</p>
+                <button></button>
+
+            </div>
+
+            <div class="option-one alternate">
+                <p class="stay-info">Stay connected, across the internet</p>
+                <button></button>
+            </div>
+        </div>
+        </section>
+
+            </div>
+    <div class="sign-info">
       You’re never more than a tap away from your data and settings. Just tap
       your profile picture and follow the link to “Manage your Google Account”.
       From your profile picture, you can also easily sign in, sign out, or turn
@@ -89,7 +111,7 @@
       <div class="hp"> <video src="Images/" width="100%"></video></div>
     </div>
     <div>
-      <div class="royal"> <img src="Images/four.png" alt=""></div>
+      <div class="hp"> <img src="Images/four.png" alt=""></div>
       <h1>Just  for  you</h1>
       </div>
   </body>
