almost done with the home page

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </p>
       </div>
       <div>
-        <video src="Images/three.mp4" autoplay  loop width="100%"></video>
+        <video src="Images/three.mp4" autoplay loop width="100%"></video>
       </div>
     </div>
     <div class="ten">
@@ -146,7 +146,7 @@
   </p>
   </div>
   <div class="phone">
-    <video src="Images/feature_one_click_access_updated.mp4" autoplay  loop width="80%"></video>
+    <video src="Images/feature_one_click_access_updated.mp4" autoplay controls  loop width="80%"></video>
   </div>
 </div>
     <div class="ten">
@@ -183,7 +183,7 @@
   </p>
   </div>
   <div class="phone">
-    <video src="Images/secure_built_in_security_first (1).mp4" autoplay  loop width="90%"></video>
+    <video src="Images/secure_built_in_security_first (1).mp4" autoplay controls  loop width="90%"></video>
   </div>
 </div>
 <section class="keep">
@@ -194,9 +194,16 @@
     <div class="keep-info">
       <a class="create" href="">Create account</a>
 </section>
+  <footer>
+    <div class="footer-info">
+      <h1><a href="">Google</a></h1>
+       <span><a href="">About Google</a></span>
+       <span><a href="">Google products</a></span>
+       <span><a href="">Privacy</a</span>
+       <span><a href="">Terms</a></span>
+    </div>
+  </footer>
 
 
-      
-   
   </body>
 </html>
