done with the home page

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   </p>
   </div>
   <div class="phone">
-    <video src="Images/feature_one_click_access_updated.mp4" autoplay controls  loop width="80%"></video>
+    <video src="Images/feature_one_click_access_updated.mp4" autoplay loop width="80%"></video>
   </div>
 </div>
     <div class="ten">
@@ -183,7 +183,7 @@
   </p>
   </div>
   <div class="phone">
-    <video src="Images/secure_built_in_security_first (1).mp4" autoplay controls  loop width="90%"></video>
+    <video src="Images/secure_built_in_security_first (1).mp4" autoplay loop width="90%"></video>
   </div>
 </div>
 <section class="keep">
@@ -196,11 +196,30 @@
 </section>
   <footer>
     <div class="footer-info">
-      <h1><a href="">Google</a></h1>
-       <span><a href="">About Google</a></span>
-       <span><a href="">Google products</a></span>
-       <span><a href="">Privacy</a</span>
-       <span><a href="">Terms</a></span>
+      <span class="logo"><a href="">Google</a></span>
+       <span class="logo_2"><a href="">About Google</a></span>
+       <span class="logo_3"><a href="">Google products</a></span>
+       <span class="logo_4"><a href="">Privacy</a</span>
+       <span class="logo_5"><a href="">Terms</a></span>
+        <span class="logo_6"><a href="">? Help</a></span>
+        <select class="language" id="language">
+          <option class="option" value="English (United State)" selected="">English (United State)</option>
+          <option class="option" value="Afrikaans">Afrikaans‬</option>
+          <option class="option" value="azərbaycan">azərbaycan‬</option>
+          <option class="option" value="bosanski">‪bosanski‬</option>
+          <option class="option" value="català">català‬</option>
+          <option class="option" value="Čeština">Čeština‬</option>
+          <option class="option" value="Dansk">‪Dansk</option>
+          <option class="option" value="Deutsch">Deutsch‬</option>
+          <option class="option" value="English (United Kingdom)">English (United Kingdom)‬</option>
+          <option class="option" value="Español (España)">‪Español (España)‬</option>
+          <option class="option" value="Español (Latinoamérica)">‪Español (Latinoamérica)‬</option>
+          <option class="option" value="Filipino">Filipino‬)</option>
+          <option class="option" value="Français (Canada)">Français (Canada)</option>
+          <option class="option" value="Français (France)">‪Français (France)‬</option>
+          <option class="option" value="galego">‪galego‬</option>
+          <option class="option" value="Indonesia">‪Indonesia‬</option>
+      </select>
     </div>
   </footer>
 
