--- a/review.html
+++ b/review.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phone Verify</title>
+    <title>REVIEW</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,34 +12,41 @@
             <div class="firstbox">
                 <div class="img-h1">
                     <img src="images/logo google.jpg" alt="logo">
-                    <h1 class="text-h1">Confirm you're not a robot</h1>
+                    <h1 class="text-h1">Review your account info</h1>
                 </div>
 
-                <div class="main-box1">
+                <div class="main-box">
                     <p class="text">
-                        Get a verification code send to your phone
+                        You can use this info when you need to sign in
                     </p>
                </div>
+               
+               <div class="inputbar">
+                    <div class="image-review">
+                        <img class="img-review" src="./images/icone-google.jpg" alt="icone-google">
+                        <nav class="img-info">
+                            <p class="name">
+                                Charles_Ebong
+                            </p>
+                            <p class="email">
+                                charlesebong@gmail.com
+                            </p>
+                        </nav>
+                    </div>
 
-               <div class="inputbar1">
-                    <select name="town" id="town" class="selectown">CMR  
-                        <option class="option" value="CMR" selected>CMR</option>
-                        <option class="option" value="CMR">France</option>
-                        <option class="option" value="CMR">USA</option>
-                        <option class="option" value="CMR">Deutsh</option>
-                        <option class="option" value="CMR">Spanish</option>
-                    </select>
-                    <input type="email2" name="email address" placeholder="Phone number">
-                    <nav>
-                        <p class="email2">
-                            Google will verify this number via SMS (charges may apply)
+                    <div class="phone-review">
+                        <p class="email">
+                            Recovery email number
                         </p>
-                        <div class="angletag2">
-                            <a href="verify.html" class="nextpage">Next</a>
-                        </div>
-                    </nav>
-               </div>
+                        <p class="number">
+                            6 93 46 02 59
+                        </p>
+                    </div>
 
+                    <div class="angletag">
+                        <a href="terms.html" class="nextpage">Next</a>
+                    </div>
+               </div>
            </div>
 
            <div class="lastbox1">
