--- a/verify.html
+++ b/verify.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phone Verify</title>
+    <title>Verify</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,34 +12,26 @@
             <div class="firstbox">
                 <div class="img-h1">
                     <img src="images/logo google.jpg" alt="logo">
-                    <h1 class="text-h1">Confirm you're not a robot</h1>
+                    <h1 class="text-h1">Enter the code</h1>
                 </div>
 
                 <div class="main-box1">
                     <p class="text">
-                        Get a verification code send to your phone
+                        Enter the 6-digit verification to confirm you got the text message
                     </p>
                </div>
 
                <div class="inputbar1">
-                    <select name="town" id="town" class="selectown">CMR  
-                        <option class="option" value="CMR" selected>CMR</option>
-                        <option class="option" value="CMR">France</option>
-                        <option class="option" value="CMR">USA</option>
-                        <option class="option" value="CMR">Deutsh</option>
-                        <option class="option" value="CMR">Spanish</option>
-                    </select>
-                    <input type="email2" name="email address" placeholder="Phone number">
+                    <input type="email" name="email address" placeholder="Enter code">
                     <nav>
-                        <p class="email2">
-                            Google will verify this number via SMS (charges may apply)
+                        <p class="email1">
+                            Get new code (29 seconds)
                         </p>
-                        <div class="angletag2">
-                            <a href="verify.html" class="nextpage">Next</a>
+                        <div class="angletag1">
+                            <a href="recovery.html" class="nextpage">Next</a>
                         </div>
                     </nav>
                </div>
-
            </div>
 
            <div class="lastbox1">
