--- a/account.html
+++ b/account.html
@@ -12,7 +12,7 @@
         <section class="aside-box">
             <div class="header-aside">
                 <div class="inside-aside">
-                    <a href="">
+                    <a href="account.html">
                         <div class="images">
                             <span class="material-symbols-outlined">
                                 account_circle
@@ -26,7 +26,7 @@
                     </a>
                 </div>
                 <div class="inside-aside">
-                    <a href="">
+                    <a href="account.html">
                         <div class="images">
                             <span class="material-symbols-outlined">
                                 badge
@@ -40,7 +40,7 @@
                     </a>
                 </div>
                 <div class="inside-aside">
-                    <a href="">
+                    <a href="account.html">
                         <div class="images">
                             <span class="material-symbols-outlined">
                                 toggle_on
@@ -54,7 +54,7 @@
                     </a>
                 </div>
                 <div class="inside-aside">
-                    <a href="">
+                    <a href="account.html">
                         <div class="images">
                             <span class="material-symbols-outlined">
                                 lock
@@ -68,7 +68,7 @@
                     </a>        
                 </div>
                 <div class="inside-aside">
-                    <a href="">
+                    <a href="account.html">
                         <div class="images">
                             <span class="material-symbols-outlined">
                                 group
@@ -82,7 +82,7 @@
                     </a>        
                 </div>
                 <div class="inside-aside">
-                    <a href="">
+                    <a href="account.html">
                         <div class="images">
                             <span class="material-symbols-outlined">
                                 credit_card
@@ -98,7 +98,7 @@
             </div>
 
             <div class="inside-aside">
-                <a href="">
+                <a href="account.html">
                     <div class="images">
                         <span class="material-symbols-outlined">
                             info
@@ -115,12 +115,12 @@
 
             <div class="footer-aside">
                 <nav class="aside-footer-nav">
-                    <a href="#" class="angle-footer">Confidentialité</a>
-                    <a href="#" class="angle-footer">Conditions</a>
-                    <a href="#" class="angle-footer">Aide</a>
-                    <a href="#" class="angle-footer"></a>
+                    <a href="account.html" class="angle-footer">Confidentialité</a>
+                    <a href="account.html" class="angle-footer">Conditions</a>
+                    <a href="account.html" class="angle-footer">Aide</a>
+                    <a href="account.html" class="angle-footer"></a>
                 </nav>
-                <a href="#" class="angle-footer">A propos</a>
+                <a href="account.html" class="angle-footer">A propos</a>
                 <a href="#" class="angle-footer"></a>
             </div>
         </section>
@@ -128,7 +128,7 @@
         <section class="header-box">
             <div class="header-container">
                 <div class="left-box boxing ">
-                    <a href="" class="header-left-angle-tag">
+                    <a href="account.html" class="header-left-angle-tag">
                         <div class="boxs">
                             <img class="google-logo" src="./images/Google_logo.png" alt="Google_logo">
                         </div>
@@ -138,7 +138,7 @@
                     </a>
                 </div>
                 <div class="center-box boxing">
-                    <form action="#" method="post">
+                    <form action="account.html" method="post">
                             <span class="icon-png">
                                 <img src="./images/search_FILL.png" alt="search_FILL" class="material-symbols-outlined">
                                 <input type="search" placeholder="Rechercher dans le compte Google">
@@ -181,7 +181,7 @@
 
                 <div class="inline-box">
                     <div class="inline-box1">
-                        <a href="index.html">
+                        <a href="phone_verify.html">
                             <div class="upbox">
                                 <nav class="box-size">
                                     <h1 class="title1">Confidentialité et personnalisation</h1>
@@ -201,7 +201,7 @@
                     </div>
 
                     <div class="inline-box2">
-                        <a href="#">
+                        <a href="account.html">
                             <div class="upbox">
                                 <nav class="box-size">
                                     <h1 class="title1">Votre compte est<br> protege</h1>
@@ -221,7 +221,7 @@
                     </div>
 
                     <div class="block-box">
-                        <a href="#">
+                        <a href="account.html">
                             <div class="upbox1">
                                 <nav class="box-size1">
                                     <h2 class="title2">Suggestions disponibles concernant la<br>confidentialite</h2>
@@ -260,7 +260,7 @@
                                 Nous vous recommendons de verifier egalement vos parametres pous Maps, la<br>
                                 recherche ou tout autre service google que vous utilisez regulierement.
                                 Google protege la confidentialite et la se-<br>curite de vos donnees.
-                                <a href="#" class="angletags">En savoir plus</a>
+                                <a href="account.html" class="angletags">En savoir plus</a>
                             </p>
                             <img src="images/privacypolicy_icon.png" alt="privacypolicy_icon" class="img-lastbox">
                         </div>
