almost done with home page

--- a/index.html
+++ b/index.html
@@ -10,20 +10,15 @@
   <body>
     <div class="nav">
       <div class="one">
-        <span class="google_image"
-          ><img
-            src="Images/download.png"
-            width="100%"
-            height="100%"
-            alt="google"
-          />
-          <a class="nine">Account</a></span
-        ><span><a href="" class="three">Overview</a></span
-        ><span><a href="" class="five">Privacy tools</a></span>
+        <span class="google_image">
+          <img src="Images/download.png"width="100%" height="100%"alt="google"/>
+          <a class="nine">Account</a></span>
+          <span><a href="" class="three">Overview</a></span>
+        <span><a href="" class="five">Privacy tools</a></span>
       </div>
       <div class="two">
-        <a class="create" href="">Create account</a
-        ><a class="go_to" href="">Go to google Account</a>
+        <a class="create" href="create_account.html">Create account</a>
+        <a class="go_to" href="Account.html">Go to google Account</a>
       </div>
     </div>
     <div class="seven">
@@ -37,7 +32,7 @@
         </div>
       </div>
       <div class="six">
-        <video src="Images/first.mp4" autoplay loop width="100%"></video>
+        <video src="Images/first.mp4" autoplay  width="100%"></video>
       </div>
     </div>
     <div class="white">
@@ -197,11 +192,11 @@
   <footer>
     <div class="footer-info">
       <span class="logo"><a href="">Google</a></span>
-       <span class="logo_2"><a href="">About Google</a></span>
-       <span class="logo_3"><a href="">Google products</a></span>
-       <span class="logo_4"><a href="">Privacy</a</span>
-       <span class="logo_5"><a href="">Terms</a></span>
-        <span class="logo_6"><a href="">? Help</a></span>
+       <span class="logo_2"><a href="#">About Google</a></span>
+       <span class="logo_3"><a href="#">Google products</a></span>
+       <span class="logo_4"><a href="#">Privacy</a></span>
+       <span class="logo_5"><a href="#">Terms</a></span>
+        <span class="logo_6"><a href="#">? Help</a></span>
         <select class="language" id="language">
           <option class="option" value="English (United State)" selected="">English (United State)</option>
           <option class="option" value="Afrikaans">Afrikaans‬</option>
